--- a/collapses.ipynb
+++ b/collapses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_collapse_scores(league, year, flat=True):\n",
+    "def generate_collapse_scores_by_year(league, year, flat=True):\n",
     "    df = pd.read_csv(\"data/\" + league + \"/\" + str(year) + \".csv\")\n",
     "    \n",
     "    season = {}\n",
@@ -29,12 +29,9 @@
     "        home_team = row[\"home_team\"]\n",
     "        away_team = row[\"away_team\"]\n",
     "        home_win = row[\"home_team_score\"] > row[\"away_team_score\"]\n",
-    "        \n",
-    "        home_games = season.get(home_team, np.array([]))\n",
-    "        away_games = season.get(away_team, np.array([]))\n",
-    "        \n",
-    "        season[home_team] = np.append(home_games, home_win)\n",
-    "        season[away_team] = np.append(away_games, not home_win)\n",
+    "               \n",
+    "        season[home_team] = np.append(season.get(home_team, np.array([])), home_win)\n",
+    "        season[away_team] = np.append(season.get(away_team, np.array([])), not home_win)\n",
     "        \n",
     "    # remove playoffs by finding minimum games played and only retaining those    \n",
     "    \n",
@@ -68,7 +65,27 @@
     "            \n",
     "        collapse_scores[team] = 1 / probability\n",
     "        \n",
+    "    return collapse_scores\n",
+    "\n",
+    "def generate_collapse_scores(league, years):\n",
+    "    collapse_scores = {}\n",
+    "    \n",
+    "    for year in years:\n",
+    "        year_collapse_scores = generate_collapse_scores_by_year(league, year)\n",
+    "        \n",
+    "        for team in year_collapse_scores:\n",
+    "            collapse_scores[team] = np.append(collapse_scores.get(team, np.array([])), year_collapse_scores[team])\n",
+    "            \n",
     "    return collapse_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_collapse_scores(\"nba\", NBA_YEARS)"
    ]
   },
   {
