get collapse scores

--- a/collapses.ipynb
+++ b/collapses.ipynb
@@ -12,6 +12,7 @@
     "from scipy.special import comb\n",
     "\n",
     "NBA_YEARS = range(1950, 2021)"
+    "MLB_YEARS = range(1903, 2019)"
    ]
   },
   {
